testdata/baselines/reference/submodule/conformance/objectRest.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
objectRest.ts(7,12): error TS2339: Property '0' does not exist on type '{}'.
objectRest.ts(7,20): error TS2339: Property '1' does not exist on type '{}'.
objectRest.ts(43,8): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(43,35): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(43,57): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o' must be of type '{ a: number; b: string; }', but here has type '{}'.
objectRest.ts(44,5): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(44,32): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(44,53): error TS2739: Type '{}' is missing the following properties from type '{ a: number; b: string; }': a, b


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== objectRest.ts (8 errors) ====
    var o = { a: 1, b: 'no' }
    var { ...clone } = o;
    var { a, ...justB } = o;
    var { a, b: renamed, ...empty } = o;
    var { ['b']: renamed, ...justA } = o;
    var { 'b': renamed, ...justA } = o;
    var { b: { '0': n, '1': oooo }, ...justA } = o;
               ~~~
!!! error TS2339: Property '0' does not exist on type '{}'.
                       ~~~
!!! error TS2339: Property '1' does not exist on type '{}'.
    
    let o2 = { c: 'terrible idea?', d: 'yes' };
    var { d: renamed, ...d } = o2;
    
    let nestedrest: { x: number, n1: { y: number, n2: { z: number, n3: { n4: number } } }, rest: number, restrest: number };
    var { x, n1: { y, n2: { z, n3: { ...nr } } }, ...restrest } = nestedrest;
    
    let complex: { x: { ka, ki }, y: number };
    var { x: { ka, ...nested }, y: other, ...rest } = complex;
    ({x: { ka, ...nested }, y: other, ...rest} = complex);
    var { x, ...fresh } = { x: 1, y: 2 };
    ({ x, ...fresh } = { x: 1, y: 2 });
    
    class Removable {
        private x: number;
        protected y: number;
        set z(value: number) { }
        get both(): number { return 12 }
        set both(value: number) { }
        m() { }
        removed: string;
        remainder: string;
    }
    interface I {
        m(): void;
        removed: string;
        remainder: string;
    }
    var removable = new Removable();
    var { removed, ...removableRest } = removable;
    var i: I = removable;
    var { removed, ...removableRest2 } = i;
    
    let computed = 'b';
    let computed2 = 'a';
    var { [computed]: stillNotGreat, [computed2]: soSo,  ...o } = o;
           ~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                      ~~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                                            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o' must be of type '{ a: number; b: string; }', but here has type '{}'.
!!! related TS6203 objectRest.ts:1:5: 'o' was also declared here.
    ({ [computed]: stillNotGreat, [computed2]: soSo, ...o } = o);
        ~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                   ~~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                                        ~
!!! error TS2739: Type '{}' is missing the following properties from type '{ a: number; b: string; }': a, b
    
    var noContextualType = ({ aNumber = 12, ...notEmptyObject }) => aNumber + notEmptyObject.anythingGoes;
    